# pve-ups

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  db.py  engine.py  main.py  notify.py  proxmox.py  ups.py
app/web/: app.js  handbuch.html  i18n.js  index.html  manual.html  style.css
app/web/i18n/: de.js  en.js
deploy/: pve-usv-agent.path  pve-usv-agent.service  pve-usv-agent.sh  pve-usv-agent.timer  pve-usv.service  setup-in-container.sh
scripts/: make-dist.ps1  make-dist.sh
snmpdata/: battery.snmprec  public.snmprec
tests/: test_basic.py  test_i18n.py
